--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    allprojects {
+        repositories {
+            jcenter()
+            maven { url "https://jitpack.io" }
+
+            maven {
+                url 'http://dl.bintray.com/dev-fingerlinks/maven'
+            }
+            mavenCentral()
+        }
+    }
+
 }
 
 dependencies {
@@ -30,4 +42,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
     testCompile 'junit:junit:4.12'
     compile 'com.larswerkman:HoloColorPicker:1.5'
+    compile 'com.facebook.fresco:fresco:1.5.0'
 }
